# swpp202301-compiler-team1

./: .gitignore  CMakeLists.txt  README.md  run_build.sh  test_benchmark_compilation.sh  unit_tests.py
.github/scripts/: alive2-swpp-intrinsics.patch  benchmark_alive2_test.sh  build_alive2.sh  test_benchmark_compilation.sh
.github/workflows/: BuildAndTest.yml  CI_BuildTest.yml
src/: args.h
src/lib/: opt.cpp
src/lib/opt/: InstructionCost.h  add_to_sum.cpp  add_to_sum.h  arithmetic_pass.cpp  arithmetic_pass.h  bias_to_false_branch.cpp  bias_to_false_branch.h  dce_pass.cpp  dce_pass.h  demopropinteq.cpp  function_inlining.cpp  function_inlining.h  gep_elim.cpp  gep_elim.h  gep_eliminate.cpp  gep_eliminate.h  gvn_pass.cpp  gvn_pass.h  heap_to_stack.cpp  heap_to_stack.h  lcssa_pass.cpp  lcssa_pass.h  loop_extractor.cpp  loop_extractor.h  loop_unrolling.cpp  loop_unrolling.h  oracle_pass.cpp  oracle_pass.h  register_pressure.cpp  register_pressure_analysis.cpp  register_pressure_analysis.h  register_pressure_reduction.cpp  register_pressure_reduction.h  simplify_cfg.cpp  simplify_cfg.h  store_to_oracle.cpp  store_to_oracle.h  use_async_load.cpp  use_async_load.h
unit_tests/: DCE_1.ll  DCE_2.ll  DCE_3.ll  GVN_1.ll  GVN_2.ll  GVN_3.ll  LCSSA_1.ll  LCSSA_2.ll  LCSSA_3.ll  add_to_sum_1.ll  add_to_sum_2.ll  add_to_sum_3.ll  add_to_sum_4.ll  add_to_sum_5.ll  add_to_sum_6.ll  add_to_sum_7.ll  arithmetic_pass_1.ll  arithmetic_pass_2.ll  arithmetic_pass_3.ll  arithmetic_pass_4.ll  arithmetic_pass_5.ll  arithmetic_pass_6.ll  bias_to_false_branch-1.ll  bias_to_false_branch-2.ll  bias_to_false_branch-3.ll  bias_to_false_branch-5.ll  demopropinteq-1.ll  entries.csv  gep_elim_1.ll  gep_elim_2.ll  gep_elim_3.ll  loop.ll  loop_unrolling_1.ll  loop_unrolling_2.ll  register_pressure_analysis-1.ll  register_pressure_analysis-3.ll  store_to_oracle_1.ll  store_to_oracle_2.ll  store_to_oracle_3.ll  store_to_oracle_4.ll  (+3 more)
unit_tests/add_to_sum/: add_to_sum_2.ll  add_to_sum_4.ll  add_to_sum_7.ll
unit_tests/arithmetic_pass/: arithmetic_pass_1.ll  arithmetic_pass_2.ll
unit_tests/bias_to_false_branch/: bias_to_false_branch-1.ll  bias_to_false_branch-4.ll
unit_tests/function_inlining/: function_inlining-1.ll  function_inlining-2.ll  function_inlining-3.ll  function_inlining-4.ll  function_inlining-5.ll  function_inlining-6.ll  function_inlining-7.ll  function_inlining-8.ll  function_inlining-9.ll
unit_tests/gep_elim/: gep_elim_1.ll  gep_elim_2.ll  gep_elim_3.ll
unit_tests/heap_to_stack/: extensive_stack_usage.ll  malloc_and_free.ll  no_malloc.ll  recursive_malloc.ll
unit_tests/lcssa_pass/: LCSSA_1.ll  LCSSA_2.ll  LCSSA_3.ll
unit_tests/loop_extractor/: anagram.ll  binary_tree.ll  bubble_sort.ll  floyd.ll  friend.ll  jenkins_hash.ll
unit_tests/loop_unrolling/: fixed_trip_count.ll  if_else_loop.ll  loop_unrolling_1.ll  loop_unrolling_2.ll  merge_test.ll  runtime_unrolling.ll  simple_loop.ll  variable_trip_count.ll
unit_tests/oracle_pass/: call.ll  intrinsic_call.ll  more_than_9_stores.ll  one_store.ll  oracle_base_case.ll  stores_apart_may_alias.ll  stores_apart_no_alias.ll
unit_tests/register_pressure_analysis/: register_pressure_analysis-2.ll  register_pressure_analysis-3.ll
unit_tests/register_pressure_reduction/: distant_usage.ll
unit_tests/simplify_cfg/: fold_branch.ll  hoist_common_insts.ll  merge.ll  phi_eliminate.ll  switch.ll
unit_tests/use_async_load/: use_async_load-2.ll  use_async_load-3.ll  use_async_load-4.ll  use_async_load-5.ll  use_async_load-6.ll  use_async_load-7.ll  useasyncload-3.ll
unittestbackup/: arithmetic_pass_5.ll
